chore:add anns search sparse and dense search limit, metadata attributes

--- a/.env.example
+++ b/.env.example
@@ -33,6 +33,12 @@ DENSE_SEARCH_INDEX_TYPE=IVF_SQ8            #default_value:IVF_SQ8
 DENSE_SEARCH_METRIC_TYPE=L2                #default_value:L2
 DENSE_SEARCH_NLIST=128                     #default_value:128
 
+SPARSE_SEARCH_INDEX_TYPE=SPARSE_INVERTED_INDEX
+SPARSE_SEARCH_METRIC_TYPE=IP
+
+DENSE_SEARCH_LIMIT=3
+SPARSE_SEARCH_LIMIT=3
+
 ############### Chat History for Memory ##############
 CHAT_HISTORY=2                            #default_value:2
 
@@ -63,28 +69,29 @@ LANGCHAIN=True
 
 ###################### SELF QUERY METADATA ATTRIBUTES ####################
 ##Ensure you put the exact metadata parameters below, instead Self RAG may Throw an error
-SELF_RAG_METADATA_ATTRIBUTES_LIST=[
-    {
-        "name": "source_link",
-        "description": "Defines the source link of the file.",
-        "type": "string"
-    },
-    {
-        "name": "author_name",
-        "description": "The author of the file.",
-        "type": "string"
-    },
-    {
-        "name": "related_topics",
-        "description": "The topics related to the file.",
-        "type": "array"
-    },
-    {
-        "name": "pdf_links",
-        "description": "The PDF links which contain extra information about the file.",
-        "type": "array"
-    },
-]
+#Note: If you don't have all 5 attributes, put empty.. ""
+
+METADATA_ATTRIBUTE1_NAME=source_link
+METADATA_ATTRIBUTE1_DESCRIPTION=Defines the source link of the file
+METADATA_ATTRIBUTE1_TYPE=string
+
+METADATA_ATTRIBUTE2_NAME=author_name
+METADATA_ATTRIBUTE2_DESCRIPTION=The author of the file.
+METADATA_ATTRIBUTE2_TYPE=string
+
+METADATA_ATTRIBUTE3_NAME=related_topics
+METADATA_ATTRIBUTE3_DESCRIPTION=The topics related to the file.
+METADATA_ATTRIBUTE3_TYPE=array
+
+METADATA_ATTRIBUTE4_NAME=pdf_links
+METADATA_ATTRIBUTE4_DESCRIPTION=The PDF links which contain extra information about the file.
+METADATA_ATTRIBUTE4_TYPE=array
+
+METADATA_ATTRIBUTE5_NAME=
+METADATA_ATTRIBUTE5_DESCRIPTION=
+METADATA_ATTRIBUTE5_TYPE=
+
+SELF_RAG_DOCUMENTS_BRIEF_SUMMARY=ey company docs contains audit, tax, ai & supply chain domains
 
 ######################## QUESTION MODERATION ######################
 #If Not Provided, default_value provided in the codebase
@@ -120,9 +127,6 @@ QUESTION_MODERATION_PROMPT=You are a Content Moderator working for a technology 
 MODEL_SPECIFIC_PROMPT_USER_TAG=                                #default: ""
 MODEL_SPECIFIC_PROMPT_SYSTEM_TAG=                              #default: ""
 MODEL_SPECIFIC_PROMPT_ASSISTANT_TAG=                           ##default: ""
-
-SPARSE_SEARCH_INDEX_TYPE=SPARSE_INVERTED_INDEX
-SPARSE_SEARCH_METRIC_TYPE=IP
 
 QUESTION=Tell me about supply chain consulting?
 
