--- a/pyproject.toml
+++ b/pyproject.toml
@@ -44,6 +44,7 @@ boto3 = "^1.35.96"
 psutil = "^6.1.1"
 nvidia-ml-py3 = "^7.352.0"
 slowapi = "^0.1.9"
+memory-profiler = "^0.61.0"
 
 [tool.poetry.group.lint.dependencies]
 ruff = "^0.5.0"
