chore:add param for followup quest

--- a/.env.example
+++ b/.env.example
@@ -43,6 +43,7 @@ SPARSE_SEARCH_LIMIT=3
 CHAT_HISTORY=2                            #default_value:2
 
 ################### Used RAGAS For Evaluation: faithfullness, context_precision, answer_relevancy ###############
+# Note: For Evalutaion, used RAGAS retrieval and generation metrices: If True increases the latency and 
 IS_EVALUATE=False                        #default_value:True
 
 ################### Reranking ############################
@@ -61,6 +62,7 @@ GUARDRAIL_MODEL_NAME=
 GUARDRAIL_API_KEY=
 GUARDRAIL_BASE_URL=
 GUARDRAIL_EMBEDDING_MODEL=
+
 ################## Mlfow ###########################
 MLFLOW_TRACKING_URI=http://localhost:5000
 MLFLOW_EXPERIMENT_NAME=
@@ -147,6 +149,10 @@ COLLECTION_NAME=
 
 #OPTIONAL:FOR STREAMLIT APPLICATION ONLY: Option to Store data into Github/AWS
 RESPONSE_HISTORY_STORE=True
+
+########################## Question Recommendation(Followups) #####################
+
+IS_FOLLOWUP=True
 
 ################ Github Creds ################
 #NOTE: Make sure to creds a .csv file inside the repository, default_values are null if is_github=false
