chore:add comments for proper env usage and guide, params for ASR

--- a/.env.example
+++ b/.env.example
@@ -1,77 +1,112 @@
 # .env.example file
 
 #Data Storage Guide:
-###########################
-## While Storing the Data for Sparse and Dense Vector Embeddings Ensure to USE below mendatory field names
-## IMPORTANT => for SPARSE_INDEX_NAME: sparse_vector , DENSE_INDEX_NAME: dense_vector
-###########################
 
-################### For Perosnalized Responses #####################
+######################### SYSTEM REQUIREMENTS #####################
+
+######### **FFMPEG** #####################
+
+# On windows: Please follow the below guide on how to setup ffmpeg on your os..
+# Guide: https://www.wikihow.com/Install-FFmpeg-on-Windows
+# Download: https://www.gyan.dev/ffmpeg/builds/#release-builds
+
+# on windows subsystem linux(wsl)
+# apk update && apk add ffmpeg
+
+# On linux
+# sudo apt update && sudo apt install ffmpeg -y
+
+################### For Personalized Responses #####################
 YOUR_NAME=SAMIKSHA
 
-##################### LLM MODEL CONFIGURATIONS ###################
-#Make sure the provider BASE_URL & Correct API key
+##################### **LLM MODEL CONFIGURATIONS** ###################
+
+# NOTE: Make sure to provide BASE_URL & Correct API key
+
 LLM_MODEL_NAME=llama-3.1-8b-instant                                 #Required
-PROVIDER_BASE_URL=                 #e.g https://api.groq.com/openai/v1  #Required
-LLM_API_KEY=                                          #Required
+PROVIDER_BASE_URL=https://api.groq.com/openai/v1                    #Required
+LLM_API_KEY=                                                        #Required
 
 ############## **PRICING** ###############################
+
 INPUT_TOKENS_PER_MILLION_COST=0.0025
 OUTPUT_TOKENS_PER_MILLION_COST=0.0064
-############################
-# For HYBRID_SEARCH
 
-# LOCAL EMBEDDING MODELS: NOAPI COST REQUIRED
-# Note: Please Provided supported models for Dense Embeddings & Sparse Embeddings by `fastembed` library
+############## **HYBRID_SEARCH** ######################
+
+# LOCAL EMBEDDING MODELS: NO API COST REQUIRED
+# NOTE: Please Provided supported models for Dense Embeddings & Sparse Embeddings by `fastembed` library
 # REFERENCE:
-#############################
+################ **EMBEDDING MODELS** ################
+
+## While Storing the Data for Sparse and Dense Vector Embeddings Ensure to USE below mandatory field names
+## IMPORTANT => for SPARSE_INDEX_NAME: sparse_vector , DENSE_INDEX_NAME: dense_vector
+
+## For SPARSE & DENSE vector embedding models fastembed models used.. This will download the models locally
+### NOTE: Please make sure to use the supported models by fastembed only, instead throw an error
+# Please Visit to check the supported models : https://qdrant.github.io/fastembed/examples/Supported_Models/
+
 DENSE_EMBEDDING_MODEL=jinaai/jina-embeddings-v2-base-en                #default_value: jinaai/jina-embeddings-v2-base-en
 SPARSE_EMBEDDING_MODEL=Qdrant/bm42-all-minilm-l6-v2-attentions         #default_value: Qdrant/bm42-all-minilm-l6-v2-attentions
 
-################# DENSE SEARCH INDEXING PARAMS #############
+################# **DENSE SEARCH INDEXING PARAMS** #############
+
 DENSE_SEARCH_INDEX_TYPE=IVF_SQ8            #default_value:IVF_SQ8
 DENSE_SEARCH_METRIC_TYPE=L2                #default_value:L2
 DENSE_SEARCH_NLIST=128                     #default_value:128
 
-SPARSE_SEARCH_INDEX_TYPE=SPARSE_INVERTED_INDEX
-SPARSE_SEARCH_METRIC_TYPE=IP
+SPARSE_SEARCH_INDEX_TYPE=SPARSE_INVERTED_INDEX  #default_value:SPARSE_INVERTED_INDEX
+SPARSE_SEARCH_METRIC_TYPE=IP                    #default_value:IP
 
-DENSE_SEARCH_LIMIT=3
-SPARSE_SEARCH_LIMIT=3
+DENSE_SEARCH_LIMIT=3                            #default_value:3                           
+SPARSE_SEARCH_LIMIT=3                           #default_value:3
 
-############### Chat History for Memory ##############
-CHAT_HISTORY=2                            #default_value:2
+############### **Chat History for Memory** ##############
+CHAT_HISTORY=2                                  #default_value:2
 
-################### Used RAGAS For Evaluation: faithfullness, context_precision, answer_relevancy ###############
-# Note: For Evalutaion, used RAGAS retrieval and generation metrices: If True increases the latency and 
-IS_EVALUATE=False                        #default_value:True
+################### **RAGAS EVALUATION** #################
 
-################### Reranking ############################
+## IMP: RAGAS Evaluation Increases Latency and almost take 50% of time.
+# NOTE: Used RAGAS For Evaluation: faithfullness, context_precision, answer_relevancy
+IS_EVALUATE=False                               #default_value:True
 
-#NOTE: Reranking takes time, Increased in Response Time may occur
-IS_RERANK=True                     #default_value: False
-RERANK_TOPK=3                       #default_value: 3
+################### **RERANKING** ############################
+
+# NOTE: for reranking used milvus to store the data & FlashrankRerank() for reranking and retrieving the documents
+# This is a retrival and compression method, may increase the latency, But Improves the RAG Performance
+
+IS_RERANK=False                                 #default_value: False
+RERANK_TOPK=3                                   #default_value: 3
 
 ############## !!!!!!!!!IMPORTANT!!!!!!!!!!  ##################
 # IF RERANKING IS FALSE: then wisely choose top_k value, it may exceed the Context Limit
-HYBRID_SEARCH_TOPK=3                #default_value:3
+
+# If top_k = 4 then for each expanded query 8 topk chunks will be get retrieved (4 sparse vectors & 4 dense vectors)
+
+HYBRID_SEARCH_TOPK=4                           #default_value:3
 
 ################ Guardrails ########################
+# Please Visit Guardrails for More Details: https://docs.nvidia.com/nemo/guardrails/introduction.html
+# Used Nemo Package by NVIDIA to enhance the conversation flow and act as a guard for our RAG System..
+
 GUARDRAIL_ENGINE_NAME=
 GUARDRAIL_MODEL_NAME=
 GUARDRAIL_API_KEY=
 GUARDRAIL_BASE_URL=
 GUARDRAIL_EMBEDDING_MODEL=
 
-################## Mlfow ###########################
-MLFLOW_TRACKING_URI=http://localhost:5000
-MLFLOW_EXPERIMENT_NAME=
-MLFLOW_RUN_NAME=
-LANGCHAIN=True
+################## MLFLOW MODEL LOGGING & TRACING ###########################
+
+# Please Visit MLFLOW for more details: https://mlflow.org/docs/latest/llms/index.html
+
+MLFLOW_TRACKING_URI=http://localhost:5000                 #default_value:http://localhost:5000            
+MLFLOW_EXPERIMENT_NAME=first_exp                          #default_value:first_exp
+MLFLOW_RUN_NAME=rag_chatbot_sam_1                         #default_value:rag_chatbot_sam_1                         
+LANGCHAIN=True                                            #default_value:True                                        
 
 ###################### SELF QUERY METADATA ATTRIBUTES ####################
-##Ensure you put the exact metadata parameters below, instead Self RAG may Throw an error
-#Note: If you don't have all 5 attributes, put empty.. ""
+# Ensure you put the exact metadata parameters below, instead Self RAG may Throw an error
+# NOTE: If you don't have all 5 attributes, put empty.. ""
 
 METADATA_ATTRIBUTE1_NAME=source_link
 METADATA_ATTRIBUTE1_DESCRIPTION=Defines the source link of the file
@@ -95,8 +130,8 @@ METADATA_ATTRIBUTE5_TYPE=
 
 SELF_RAG_DOCUMENTS_BRIEF_SUMMARY=ey company docs contains audit, tax, ai & supply chain domains
 
-######################## QUESTION MODERATION ######################
-#If Not Provided, default_value provided in the codebase
+######################## **QUESTION MODERATION** ######################
+# If Not Provided, default_value provided same as below provided 
 QUESTION_MODERATION_PROMPT=You are a Content Moderator working for a technology and consulting company, your job is to filter out the queries which are not irrelevant and does not satisfy the intent of the chatbot.
     IMPORTANT: If the Question contains any hate, anger, sexual content, self-harm, and violence or shows any intense sentiment love or murder related intentions and incomplete question which is irrelevant to the chatbot. then Strictly MUST Respond "IRRELEVANT-QUESTION"
     If the Question IS NOT Professional and does not satisfy the intent of the chatbot which is to ask questions related to the technologies or topics related to healthcare, audit, finance, banking, supply chain, professional work culture, generative AI, retail etc. then Strictly MUST Respond "IRRELEVANT-QUESTION".
@@ -123,66 +158,103 @@ QUESTION_MODERATION_PROMPT=You are a Content Moderator working for a technology 
     Response6: IRRELEVANT-QUESTION
 
 ################### MODEL SPECIFIC PROMPT CONFIGURATIONS FOR BETTER GENERATION ACCURACY #############
-#If provided model as llama, then only pass the values.. If not provided, passed llama3.1 default values
+# If provided model as llama, then only pass the values.. If not provided, passed llama3.1 default values
 
 #NOTE: SPECIFY THE PROMPT TAGS FOR YOUR MODELS... HANDLED DEFAULT FOR LLAMA MODEL INSIDE CODE IF LLAMA MODEL CHOSEN
 MODEL_SPECIFIC_PROMPT_USER_TAG=                                #default: ""
 MODEL_SPECIFIC_PROMPT_SYSTEM_TAG=                              #default: ""
-MODEL_SPECIFIC_PROMPT_ASSISTANT_TAG=                           ##default: ""
-
-QUESTION=Tell me about supply chain consulting?
+MODEL_SPECIFIC_PROMPT_ASSISTANT_TAG=                           #default: ""
 
 ##################### LLM MODEL PARAMETERS #####################
-TEMPERATURE=0.0                        #default_value:0.0
-TOP_P=0.3                              #default_value:0.3
-FREQUENCY_PENALTY=1.0                 #default_value:1.0
+TEMPERATURE=0.0                                                #default_value:0.0
+TOP_P=0.3                                                      #default_value:0.3
+FREQUENCY_PENALTY=0.01                                         #default_value:1.0
 
 #################### ZILLINZ MILVUS CREDENTIALS #######################
 
-ZILLIZ_CLOUD_URI=
+ZILLIZ_CLOUD_URI=https://in03-c2cc7c5da8decab.api.gcp-us-west1.zillizcloud.com
 ZILLIZ_CLOUD_API_KEY=
-COLLECTION_NAME=
-
-#############
-# ENV VARIABLES OF YOUR APP
-#############
+COLLECTION_NAME=ey_data_1511
 
 #OPTIONAL:FOR STREAMLIT APPLICATION ONLY: Option to Store data into Github/AWS
-RESPONSE_HISTORY_STORE=True
+RESPONSE_HISTORY_STORE=False
 
-########################## Question Recommendation(Followups) #####################
+########################## **Question Recommendation(Followups)** #####################
 
 IS_FOLLOWUP=True
+FOLLOWUP_TEMPLATE=Generate 5 followup questions based on the question, context of the question and response for more comprehensive and relatable to the question.
 
-################ Github Creds ################
+################ **Github Creds** ################
+# To store your chat history or output to a cloud, for further evaluation, finetuning etc..
 #NOTE: Make sure to creds a .csv file inside the repository, default_values are null if is_github=false
 
 IS_GITHUB=False
-GITHUB_TOKEN=
-GITHUB_REPO_NAME=
-GITHUB_CHATFILE=
+GITHUB_TOKEN=                                                     #default_value: ""
+GITHUB_REPO_NAME=kolhesamiksha/Hybrid-Search-RAG                  #default_value: ""
+GITHUB_CHATFILE=Chatbot-streamlit/chat_history/chat_history.csv   #default_value: ""
 
-################# AWS Creds ###################
+################# **AWS Creds** ###################
 # default_values are null if is_aws=false
 
-IS_AWS=False
-S3_BUCKET=
-S3_CSV_FILENAME=
+IS_AWS=True
+S3_BUCKET=hybrid-rag-s3
+S3_CSV_FILENAME=chat_history.csv
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
 
+################# **MONGODB CREDS** #################
 
-################# MongoDB Creds #################
-#OPTIONAL:FOR STREAMLIT APPLICATION/RESTAPI ONLY: to not leak any sensitive informtion over API
-#USE MONGODB STORE SENSITIVE DATA LIKE API KEYS OR CREDENTIALS INSIDE MONGODB
+# OPTIONAL:FOR STREAMLIT APPLICATION/RESTAPI ONLY: to not leak any sensitive informtion over API
+# USE MONGODB STORE SENSITIVE DATA LIKE API KEYS OR CREDENTIALS INSIDE MONGODB
 
 CONNECTION_STRING=
-MONGO_COLLECTION_NAME=
-DB_NAME=
+MONGO_COLLECTION_NAME=Hybrid-search-rag
+DB_NAME=credentials
 
+######################## **Audio to Text (ASR)** ################################
 
-########### MAIN PROMPT ##################
-#If Not Provided, default prompt will be used
+# 1. Local Model Usage, this will download a model on local.. This task is more resource intensive
+# NOTE: Make sure the model, directly get downloaded on you memory.. choose wisely as per your system resources limitation.. 
+
+IS_ASR_LOCAL=False
+ASR_LOCAL_MODEL_NAME=ai4bharat/indicwav2vec-hindi
+
+# 2. Hugging face model usage, this option will not download any model rather use Serverless API from hugging face..
+# NOTE: Check the model you are choosing provides an option to use that model on serverless.. Some models don't provide
+# Serveless deployment.. Please make sure that once
+
+## How to Get API Token from hugging face: VISIT: https://huggingface.co/docs/hub/en/security-tokens
+
+IS_ASR_HUGGING_FACE=False
+HUGGING_FACE_TOKEN=
+ASR_HG_MODEL_NAME=openai/whisper-small
+
+# 3. NON-SERVELESS: This option will provide you to use the hosted model on any cloud, Hugging face provides an option to deploy
+# the models on the cloud using their inference endpoint service.. Please check this: https://huggingface.co/inference-endpoints/dedicated
+
+HUGGING_FACE_ENDPOINT=
+ASR_HG_MODEL_NAME=openai/whisper-small
+
+# 4. This option will provide you an option to deploy the ASR model as mlflow URI and use that URI, to make inference..
+# NOTE: The model will get logged on the MLFLOW_TRACKING_URI provided above 
+
+IS_ASR_MLFLOW=False
+MLFLOW_ASR_MODEL_NAME=openai/whisper-hindi-small
+
+############# **MLFLOW ASR EXPERIMENTS** ####################
+
+MLFLOW_ASR_EXPERIMENT_NAME="asr_log"
+MLFLOW_ASR_RUN_NAME="asr_run"
+
+############################ **Summarization USE CASE** ##############################
+# https://aws.amazon.com/blogs/machine-learning/techniques-for-automatic-summarization-of-documents-using-language-models/
+
+IS_SUMMARIZATION=False
+SUMMARIZATION_PROMPT=hey
+
+########### MAIN PROMPT FOR RAG ##################
+
+# NOTE: If Not Provided, default prompt will be get used
 MASTER_PROMPT=Please follow below instructions to provide the response:
         1. Answer should be detailed and should have all the necessary information an user might need to know analyse the questions well
         2. The user says Hi or Hello. Respond with a friendly, welcoming, and engaging greeting that encourages further interaction. Make sure to sound enthusiastic and approachable
