--- a/pyproject.toml
+++ b/pyproject.toml
@@ -45,6 +45,14 @@ psutil = "^6.1.1"
 nvidia-ml-py3 = "^7.352.0"
 slowapi = "^0.1.9"
 memory-profiler = "^0.61.0"
+pyctcdecode = "^0.5.0"
+torch = "^2.5.1"
+transformers = "^4.48.1"
+torchaudio = "^2.5.1"
+einops = "^0.8.0"
+sentencepiece = "^0.2.0"
+librosa = "0.10.2.post1"
+soundfile = "0.13.0"
 
 [tool.poetry.group.lint.dependencies]
 ruff = "^0.5.0"
