chore:add summarization prompts

--- a/.env.example
+++ b/.env.example
@@ -23,9 +23,9 @@ YOUR_NAME=SAMIKSHA
 
 # NOTE: Make sure to provide BASE_URL & Correct API key
 
-LLM_MODEL_NAME=llama-3.1-8b-instant                                 #Required
-PROVIDER_BASE_URL=https://api.groq.com/openai/v1                    #Required
-LLM_API_KEY=                                                        #Required
+LLM_MODEL_NAME=llama-3.1-8b-instant                     #Required
+PROVIDER_BASE_URL=https://api.groq.com/openai/v1        #Required
+LLM_API_KEY=    #Required
 
 ############## **PRICING** ###############################
 
@@ -172,7 +172,7 @@ FREQUENCY_PENALTY=0.01                                         #default_value:1.
 
 #################### ZILLINZ MILVUS CREDENTIALS #######################
 
-ZILLIZ_CLOUD_URI=https://in03-c2cc7c5da8decab.api.gcp-us-west1.zillizcloud.com
+ZILLIZ_CLOUD_URI=
 ZILLIZ_CLOUD_API_KEY=
 COLLECTION_NAME=ey_data_1511
 
@@ -189,7 +189,7 @@ FOLLOWUP_TEMPLATE=Generate 5 followup questions based on the question, context o
 #NOTE: Make sure to creds a .csv file inside the repository, default_values are null if is_github=false
 
 IS_GITHUB=False
-GITHUB_TOKEN=                                                     #default_value: ""
+GITHUB_TOKEN=             #default_value: ""
 GITHUB_REPO_NAME=kolhesamiksha/Hybrid-Search-RAG                  #default_value: ""
 GITHUB_CHATFILE=Chatbot-streamlit/chat_history/chat_history.csv   #default_value: ""
 
@@ -250,7 +250,24 @@ MLFLOW_ASR_RUN_NAME="asr_run"
 # https://aws.amazon.com/blogs/machine-learning/techniques-for-automatic-summarization-of-documents-using-language-models/
 
 IS_SUMMARIZATION=False
-SUMMARIZATION_PROMPT=hey
+
+## NOTE: This prompt is used for extracting the topic of the question based on the metadata filters each chunk contains, because
+# Because, for document/blog/article summarization questions we need a different stratergy
+
+####### Summarization Stratergy: ################
+# 1. EXTRACTION: Extract the metadata filter or topic modelling to extract a filter value i.e as my metadata contains topic as a metadata field
+# && My data is a blogs on different domain topics.. like insurance, supply chain, finance, cubersecurity etc. 
+# Hence My prompt contains information to extract the topic from the summarization question.. 
+# 2. EXPRESSION_CREATION: based on the metadata filed value extracted above and METADATA_FILTERATION_FIELD, prepare a meta filtering expression for post meta filtering..
+# 3. PREPARE_CHUNKS: All the retrieved Documents/chunks further get prepared as a List to pass to map-reduce summarization chain.
+# 4. MAP_REDUCE: Create a map-rduce custom summarization code to summarize the retrieved chunks and return a final summary.
+
+METADATA_FILTERATION_FIELD=related_topics                 # Required for Summarisation task
+MILVUS_ITERATOR_BATCH_SIZE=50                             #default_value=50
+ITERATIVE_SEARCH_LIMIT=5000                                #default_value=10000
+MAP_PROMPT=The following is a set of documents below \nBased on this list of docs, please identify the main themes.
+REDUCE_PROMPT=The following is set of summaries provided below \nTake these and distill it into a final, consolidated summary of the main themes.
+METADATA_FILTER_EXTRACTOR_FROM_QUESTION_PROMPT=You are a consultant at ey, based on the question provided to you, please identify in which category the below question can be categorised into. \n Categories can be one among Insurance, Supply chain. STRICTLY make sure the output format should be list contains relevant Categories Example Output \["Insurance", "Supply chain", "Financial Services"]\, DONOT provide output like list of list: \['["Insurance"]']\ \nIMPORTANT: do not lowecase or uppercase the Categories, its very case-sensitive.\n NEVER ADD EXTRA COMMENTS only List of Categories.
 
 ########### MAIN PROMPT FOR RAG ##################
 
